<resources>
    <string name="app_name">SaveForPlans</string>
    <string name="save_for_plans">SAVE FOR PLANS</string>
    <string name="add_plans">Add Plans</string>
    <string name="view_existing_plans">View Existing Plans</string>
    <string name="bank_account_expenses">Bank Account and Expenses</string>
    <string name="backBtnDesc">Back</string>
    <string name="acntExpenseTxt">Bank Account and Expenses</string>
    <string name="backBtnTxt">Back</string>
    <string name="bank_acc_txt">Bank Account and Expenses</string>
    <string name="savings_account_txt">Savings Account</string>
    <string name="daily_expenses_txt">Daily Expenses</string>
    <string name="expense_initial">RM 0</string>
    <string name="edit_amt_btn_txt">Edit Amount</string>

</resources>