<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity"
    android:background="@color/light_teal">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_centerHorizontal="true"
        android:text="@string/save_for_plans"
        android:textSize="20sp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/addPlansButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:text="@string/add_plans"
        android:layout_marginTop="16dp"
        android:onClick="onClickAddPlans"/>

    <Button
        android:id="@+id/viewExistingPlansButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addPlansButton"
        android:text="@string/view_existing_plans"
        android:layout_marginTop="16dp"
        android:onClick="onClickViewExistingPlans"/>

    <Button
        android:id="@+id/bankAccountExpensesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewExistingPlansButton"
        android:text="@string/bank_account_expenses"
        android:layout_marginTop="16dp"
        android:onClick="onClickBankAccountExpenses"/>

</RelativeLayout>
